--- a/cloudhealthmemory.conf
+++ b/cloudhealthmemory.conf
@@ -4,6 +4,12 @@ LoadPlugin "python"
   Import "cloudhealthmemory"
   <Module "cloudhealthmemory">
     token "your-cloudhealth-api-token"
+
+    # defaults to <ModulePath>/cloudhealthmemory.yaml
+    #configfile "/path/to/configfile"
+
+    # store in-memory metrics to disk
+    #persistent True
   </Module>
 </Plugin>
 
